binding: Compiles event handlers only once if not compilable.

Blink no longer compiles a script for an event handler twice
or more if the script is not compilable.

BUG=597900

Review-Url: https://codereview.chromium.org/2190553003
Cr-Commit-Position: refs/heads/master@{#408638}

Former-commit-id: 2fb386fd03fc84f7ba3a72417bc2345ad6f308c4