third_party/WebKit/Source/bindings/core/v8/V8AbstractEventListener.h
@@ -85,8 +85,7 @@ public:
     // even if the user script is not compilable.
     v8::Local<v8::Object> getListenerObject(ExecutionContext* executionContext)
     {
-        prepareListenerObject(executionContext);
-        return m_listener.newLocal(m_isolate);
+        return getListenerObjectInternal(executionContext);
     }
 
     v8::Local<v8::Object> getExistingListenerObject()
@@ -119,7 +118,10 @@ public:
 protected:
     V8AbstractEventListener(bool isAttribute, DOMWrapperWorld&, v8::Isolate*);
 
-    virtual void prepareListenerObject(ExecutionContext*) { }
+    virtual v8::Local<v8::Object> getListenerObjectInternal(ExecutionContext* executionContext)
+    {
+        return getExistingListenerObject();
+    }
 
     void setListenerObject(v8::Local<v8::Object>);
 
