third_party/WebKit/Source/bindings/core/v8/V8LazyEventListener.h
@@ -59,7 +59,7 @@ public:
     const String& code() const { return m_code; }
 
 protected:
-    void prepareListenerObject(ExecutionContext*) override;
+    v8::Local<v8::Object> getListenerObjectInternal(ExecutionContext*) override;
 
 private:
     V8LazyEventListener(v8::Isolate*, const AtomicString& functionName, const AtomicString& eventParameterName, const String& code, const String sourceURL, const TextPosition&, Node*);
@@ -72,8 +72,11 @@ private:
     // SVGUseElement::transferEventListenersToShadowTree
     bool wasCreatedFromMarkup() const override { return true; }
 
+    void compileScript(ScriptState*, ExecutionContext*);
+
     void fireErrorEvent(v8::Local<v8::Context>, ExecutionContext*, v8::Local<v8::Message>);
 
+    bool m_wasCompilationFailed;
     AtomicString m_functionName;
     AtomicString m_eventParameterName;
     String m_code;
